# M02

./: .gitignore  README.md  agent.ipynb  main.py
crew_implementation/: README.md  pyproject.toml
crew_implementation/src/crew_implementation/: crew.py  main.py
crew_implementation/src/crew_implementation/config/: agents.yaml  tasks.yaml
crew_implementation/src/crew_implementation/tools/: csv_tool.py  docx_tool.py  image_tool.py  pdf_tool.py  plaintext_tool.py  xlsx_tool.py
database/: chroma.sqlite3
docuthing-crew/: env_check.py  main.py  requirements.txt
docuthing-crew/agents/: __init__.py  agents.py
docuthing-crew/chroma/: chroma.sqlite3
docuthing-crew/crew/: main_crew.py
docuthing-crew/tasks/: __init__.py  ingestion_tasks.py  query_tasks.py
docuthing-crew/tools/: __init__.py  csv_tool.py  docx_tool.py  image_tool.py  pdf_tool.py  text_tool.py
docuthing-crew/uploads/: emc-2.csv
docuthing-crew/utils/: __init__.py  chromadb_utils.py  gemini.py  ocr.py  source_validator.py
mdoel/database/: chroma.sqlite3
model/: db.py  preprocessing.ipynb  preprocessingPipeline.py  test_agentic.py
model/ai/: agent.py  graph.py
model/ai/agents/: __init__.py  crew.py  gemini.py
model/ai/state/: __init__.py  multiple_states.py
model/chroma_db/: chroma.sqlite3
model/database/: chroma.sqlite3
ui/: .env.example  bun.lockb  package.json
ui/prisma/: schema.prisma  seed.ts
ui/src/: env.js
ui/src/app/: layout.tsx  page.tsx
ui/src/components/: appSidebar.tsx  collections-sidebar.tsx  dataset-panel.tsx  document-blocks.tsx  documents-table.tsx  (+5 more)
(+46 files in other folders)
